@@ -813,7 +813,7 @@ Reader discretion is strongly advised.</p>
 <h3><a class="toc-backref" href="#toc-entry-59"><span class="sectnum">2.14.5</span> Topics, Sidebars, and Rubrics</a></h3>
 <p><em>Sidebars</em> are like miniature, parallel documents.</p>
 <aside class="sidebar">
-<p class="sidebar-title">Sidebar Title</p>
+<p class="sidebar-title">Optional Sidebar Title</p>
 <p class="sidebar-subtitle">Optional Subtitle</p>
 <p>This is a sidebar.  It is for text outside the flow of the main
 text.</p>
