@@ -1202,7 +1202,7 @@ You can make up your own admonition too.
 \emph{Sidebars} are like miniature, parallel documents.
 
 \DUsidebar{
-\DUtitle[sidebar]{Sidebar Title}
+\DUtitle[sidebar]{Optional Sidebar Title}
 
 \DUsubtitle{Optional Subtitle}
 
